--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ header .margin-r {
 }
 
 /* footer */
+
+#font-small{
+    font-size: 0.8em ;
+}
+
 footer {
     position:fixed;
     bottom: 0;
@@ -50,7 +55,7 @@ footer {
     width: 100%;
     z-index: 999;
     height: 60px;
-    background-color: green;
+    background-color: black;
 }
 
 .flex-footer {
@@ -65,6 +70,10 @@ footer .col-l {
     display: flex;
 }
 
+.gray div {
+    font-size: 0.8em;
+}
+
 ul {
     display: flex;
     text-align: center;
@@ -75,14 +84,15 @@ ul {
 
 ul li {
     list-style-type: none;
-    margin-right: 10px;
+    margin-right: 20px;
+    cursor: pointer;
 }
 
 ul li:hover .gray {
     color: gray;
 }
 
-.font-size {
+.gray > i {
     font-size: 1.5em;
 }
 
@@ -93,4 +103,18 @@ footer .col-m {
 
 footer .col-r {
     flex-basis: 10%;
+    background-color: #4a4a4a;
+    display: flex;
+    cursor: pointer;
+}
+
+
+footer .col-r > div {
+    color: red;
+    margin: auto;
+}
+
+/* colori */
+.c-green {
+    color: green;
 }
