--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 
 /* header */
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
@@ -27,7 +27,7 @@ header {
     display: flex;
     justify-content: flex-end;
     color: white; 
-    margin: 0.5em;    
+    padding: 0.3em;    
 }
 
 header button {
@@ -42,9 +42,22 @@ header .margin-r {
     margin-right: 0.7em;
 }
 
+/* main */
+
+.p-absolute {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.p-relative {
+    /* position: relative; */
+}
 
 main {
-    height: calc(100vh - 104px);    
+    height: calc(100vh - 98px); 
+    display: flex;
+    flex-wrap: wrap ;   
 }
 
 /* footer */
@@ -54,7 +67,7 @@ main {
 }
 
 footer {
-    position:fixed;
+    position:sticky;
     bottom: 0;
     left: 0;
     width: 100%;
